--- a/CHANGELOG
+++ b/CHANGELOG
@@ -35,6 +35,8 @@ Version 4.3.1 (development)
 
 - Fixed several MinGW build issues on Windows.
 
+- Remove the 'u' flag in the ar command, to update all files in the archive.
+
 
 Version 4.3, released on July 29, 2021
 ======================================
