--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+THIS IS A TEST
+
                     Finite Element Discretization Library
                                    __
                        _ __ ___   / _|  ___  _ __ ___
