better pragma cling load line

--- a/examples/jupyter/ex.ipynb
+++ b/examples/jupyter/ex.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pragma cling load(\"/srv/conda/envs/notebook/lib/libmfem.so\")"
+    "#pragma cling load(\"mfem\")"
    ]
   },
   {
