--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,9 @@
 
 Version 4.3.1 (development)
 ===========================
+- Change output formatting of all provided IterativeSolvers and a new
+  mechanism to setup the output policy.
+
 - Added support for hr-adaptivity using TMOP-based error estimator.
 
 - Added 'double' atomicAdd implementation for previous versions of CUDA.
