--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,10 @@
 
 Version 4.3.1 (development)
 ===========================
-- Change output formatting of all provided IterativeSolvers and a new
+- More explicit and consistent formating of the output of iterative solvers
+  with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.
+
+Changed the output formatting of all provided IterativeSolvers and added a new
   mechanism to setup the output policy.
 
 - Added support for mesh preprocessing to resolve fine scale problem data
