Full dies tests

--- a/tests/benchmarks/bench_ceed.tex
+++ b/tests/benchmarks/bench_ceed.tex
@@ -6,11 +6,15 @@
 \usetikzlibrary{backgrounds}
 \usetikzlibrary{calc}
 
-\newcommand{\DATA}{bp1.org}
-\newcommand{\TITLE}{BP1}
+%\newcommand{\DATA}{bp1_mi250_1xGCD_fast7.org}
+%\newcommand{\TITLE}{BP1 @ 1/2-MI250X, rocm/4.5.0}
+%\newcommand{\XMIN}{2e3}
+%\newcommand{\XMAX}{4e6}
 
-\newcommand{\XMIN}{1e3}
-\newcommand{\XMAX}{4e6}
+\newcommand{\DATA}{bp1_mi250_2xGCD_fast7.org}
+\newcommand{\TITLE}{BP1 @ Full-MI250X, rocm/4.5.0}
+\newcommand{\XMIN}{2e3}
+\newcommand{\XMAX}{1e7}
 
 \newcommand{\YMIN}{0}
 \newcommand{\YMAX}{4}
@@ -41,12 +45,12 @@ title style={font=\Large\bfseries, text=steelblue4}
 
 \begin{document}
 \pgfplotscreateplotcyclelist{CycleList}{%
-RYB2!50!black,every mark/.append style={fill=RYB2},mark=*,smooth\\%
-RYB4!50!black,every mark/.append style={fill=RYB4},mark=*,smooth\\%
-RYB6!50!black,every mark/.append style={fill=RYB6},mark=*,smooth\\%
-RYB8!50!black,every mark/.append style={fill=RYB8},mark=*,smooth\\%
-RYB10!50!black,every mark/.append style={fill=RYB10},mark=*,smooth\\%
-RYB12!50!black,every mark/.append style={fill=RYB12},mark=*,smooth\\%
+RYB2!50!black,every mark/.append style={fill=RYB2},mark=*\\%
+RYB4!50!black,every mark/.append style={fill=RYB4},mark=*\\%
+RYB6!50!black,every mark/.append style={fill=RYB6},mark=*\\%
+RYB8!50!black,every mark/.append style={fill=RYB8},mark=*\\%
+RYB10!50!black,every mark/.append style={fill=RYB10},mark=*\\%
+RYB12!50!black,every mark/.append style={fill=RYB12},mark=*\\%
 }
 
 \begin{tikzpicture}[background rectangle/.style={fill=white},
@@ -70,12 +74,12 @@ show background rectangle, scale=4.0]
     xmin=\XMIN,
     xmax=\XMAX
   ]
-  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==1?$12/1e3:NaN)};
-  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==2?$12/1e3:NaN)};
-  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==3?$12/1e3:NaN)};
-  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==4?$12/1e3:NaN)};
-  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==5?$12/1e3:NaN)};
-  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==6?$12/1e3:NaN)};
+  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==1?$12/1e3:NaN) smooth sbezier};
+  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==2?$12/1e3:NaN) smooth sbezier};
+  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==3?$12/1e3:NaN) smooth sbezier};
+  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==4?$12/1e3:NaN) smooth sbezier};
+  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==5?$12/1e3:NaN) smooth sbezier};
+  \addplot +[raw gnuplot] gnuplot { set datafile separator ','; plot "\DATA" using ($11):($13==6?$12/1e3:NaN) smooth sbezier};
 
 \end{semilogxaxis}
 \end{tikzpicture}
