Mesh and x vector setup

--- a/tests/benchmarks/bench_ceed.tex
+++ b/tests/benchmarks/bench_ceed.tex
@@ -6,15 +6,15 @@
 \usetikzlibrary{backgrounds}
 \usetikzlibrary{calc}
 
-%\newcommand{\DATA}{bp1_mi250_1xGCD_fast7.org}
-%\newcommand{\TITLE}{BP1 @ 1/2-MI250X, rocm/4.5.0}
-%\newcommand{\XMIN}{2e3}
-%\newcommand{\XMAX}{4e6}
-
-\newcommand{\DATA}{bp1_mi250_2xGCD_fast7.org}
-\newcommand{\TITLE}{BP1 @ Full-MI250X, rocm/4.5.0}
+\newcommand{\DATA}{bp1_mi250_1xGCD_fast7_rocm4.5.2.org}
+\newcommand{\TITLE}{BP1 @ 1/2-MI250X, rocm/4.5.2}
 \newcommand{\XMIN}{2e3}
-\newcommand{\XMAX}{1e7}
+\newcommand{\XMAX}{4e6}
+
+%\newcommand{\DATA}{bp1_mi250_2xGCD_fast7.org}
+%\newcommand{\TITLE}{BP1 @ Full-MI250X, rocm/4.5.0}
+%\newcommand{\XMIN}{2e3}
+%\newcommand{\XMAX}{1e7}
 
 \newcommand{\YMIN}{0}
 \newcommand{\YMAX}{4}
