TMOP full throughput

--- a/tests/benchmarks/bench_tmop_ss.tex
+++ b/tests/benchmarks/bench_tmop_ss.tex
@@ -1,5 +1,5 @@
-\documentclass[tikz]{standalone}
-%\documentclass[preview, border=4mm, convert={density=600,outext=.png}]{standalone}
+%\documentclass[tikz]{standalone}
+\documentclass[preview, border=4mm, convert={density=600,outext=.png}]{standalone}
 \usepackage{pgfplots}
 \pgfplotsset{compat=newest, table/col sep=comma}
 \usepackage{tikzscale}
