--- a/CHANGELOG
+++ b/CHANGELOG
@@ -87,6 +87,10 @@ Version 4.3.1 (development)
 - The HPC versions of ex1 and ex1p (in miniapps/performance) now support
   runtime selection of either 2D or 3D meshes.
 
+- Update the formulation for interface fitting with TMOP and introduced
+  a method to adaptively change the weight of the interface fitting term 
+  for r-adaptivity.
+
 Version 4.3, released on July 29, 2021
 ======================================
 
