--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,9 @@
 
 Version 4.3.1 (development)
 ===========================
+- Added a new Zienkiewicz-Zhu patch recovery-based a posteriori error
+  estimator; see fem/estimators.hpp.
+
 - More explicit and consistent formating of the output of iterative solvers
   with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.
 
