--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,8 +8,8 @@
                                https://mfem.org
 
 
-Version 4.3.1 (development)
-===========================
+Version 4.4, released on February 28, 2022
+==========================================
 
 - Add hipSPARSE support for sparse mat-vec multiplications.
 
