Adding CHANGELOG entry

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -87,6 +87,9 @@ Version 4.3.1 (development)
 - The HPC versions of ex1 and ex1p (in miniapps/performance) now support
   runtime selection of either 2D or 3D meshes.
 
+- Added arbitrary order Nedelec and Raviart-Thomas basis functions for
+  wedge-shaped elements.
+
 Version 4.3, released on July 29, 2021
 ======================================
 
