--- a/CHANGELOG
+++ b/CHANGELOG
@@ -107,9 +107,9 @@ Version 4.3.1 (development)
 - Added ParaView visualization of `QuadratureFunction` fields, through both
   `QuadratureFunction::SaveVTU` and `ParaViewDataCollection::RegisterQField`.
 
-- Added a simple convenience class, HYPRE_Session, to automatically set hypre's
-  global parameters, particularly GPU-relevant options. Updated example codes
-  and miniapps to use it.
+- Added a simple singleton class, Hypre, to automatically set hypre's global
+  parameters, particularly GPU-relevant options. Updated parallel example codes
+  and miniapps to call Hypre::Init() where appropriate.
 
 
 Version 4.3, released on July 29, 2021
