Rename MPI class to Mpi to avoid conflict with (deprecated) C++ MPI namespace

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -111,8 +111,8 @@ Version 4.3.1 (development)
   parameters, particularly GPU-relevant options. Updated parallel example codes
   and miniapps to call Hypre::Init() where appropriate.
 
-- Added a simple singleton class, MPI, as a replacement for MPI_Session. New
-  code should use MPI::Init() and MPI::Session() instead of MPI_Session.
+- Added a simple singleton class, Mpi, as a replacement for MPI_Session. New
+  code should use Mpi::Init() and Mpi::Session() instead of MPI_Session.
 
 
 Version 4.3, released on July 29, 2021
