--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,10 +11,12 @@
 Version 4.4.1 (development)
 ===========================
 
-- Added support for parallel non-conforming, non-matching, variational, volumetric
-  mesh information transfer using ParMoonolith (https://bitbucket.org/zulianp/par_moonolith).
-  With ParMortarAssember fields can be exchanged between arbitrarily distributed and unrelated
-  finite element meshes in a variationally consistent way.
+- Added support for ParMoonolith, https://bitbucket.org/zulianp/par_moonolith,
+  which provides parallel non-conforming, non-matching, variational, volumetric
+  mesh information transfer. With ParMortarAssember fields can be exchanged
+  between arbitrarily distributed and unrelated finite element meshes in a
+  variationally consistent way.
+
 
 Version 4.4, released on March 21, 2022
 =======================================
