--- a/INSTALL
+++ b/INSTALL
@@ -521,12 +521,12 @@ MFEM_USE_MKL_CPARDISO = YES/NO
    OpenMP capabilities are disabled at link time.
 
 MFEM_USE_MOONOLITH = YES/NO
-   Enables the interface ParMoonolith for parallel non-conforming, non-matching,
-   variational, volumetric mesh information transfer using ParMoonolith. It
-   requires the variable MOONOLITH_DIR=<path to installation> to
-   be defined in the environment in order to be used with the Makefile.
-   Makefile users are also required to install moonolith using the command
-   `make install_all` (see https://bitbucket.org/zulianp/par_moonolith for details).
+   Enables the ParMoonolith interface for parallel non-conforming, non-matching,
+   variational, volumetric mesh information transfer. It requires the variable
+   MOONOLITH_DIR=<path to installation> to be defined in the environment in
+   order to be used with the Makefile. Makefile users are also required to
+   install moonolith using the command `make install_all`, see
+   https://bitbucket.org/zulianp/par_moonolith for details.
    Although Moonolith is an MPI-based library, both serial (MFEM_USE_MPI=NO) and
    parallel (MFEM_USE_MPI=YES) versions of MFEM are supported.
 
